minor edits as per rubric

--- a/Explainable_ML_Inception_LIME.ipynb
+++ b/Explainable_ML_Inception_LIME.ipynb
@@ -125,7 +125,11 @@
         "id": "blYDBLNr4qyv"
       },
       "source": [
-        "# Download InceptionV3 Model and Sample(s) Image to test"
+        "# Download InceptionV3 Model and Sample(s) Image to test\n",
+        "\n",
+        "Reference: https://keras.io/api/applications/inceptionv3/\n",
+        "\n",
+        "Image urls can be found on Unsplash: https://unsplash.com/"
       ]
     },
     {
